--- a/mauiblazor/RecipeFriends/Components/Pages/RecipeEdit.razor
+++ b/mauiblazor/RecipeFriends/Components/Pages/RecipeEdit.razor
@@ -4,7 +4,9 @@
 @using RecipeFriends.Data
 @using RecipeFriends.Services
 
+@inject ISnackbar Snackbar
 @inject IRecipeService RecipeService
+@inject IDialogService DialogService
 @inject NavigationManager NavigationManager
 
 <MudDialog>
@@ -87,7 +89,24 @@
                             </MudPaper>
                         
                     </MudTabPanel>
-
+                    <MudTabPanel Text="Images">  
+                        <MudGrid>
+                            <MudItem xs="12">
+                                <MudGrid Justify="Justify.FlexStart">
+                                    @foreach(var image in images)
+                                    {   
+                                        <MudItem xs="3">                                           
+                                            <MudImage Src="@GetDataURL(image.Name, image.Data)" Alt="@image.Title" Elevation="25" Class="rounded-lg" style="max-height:300px;max-width:300px;height:auto;width:auto;" />
+                                           
+                                        </MudItem>
+                                    }
+                                </MudGrid>
+                            </MudItem>
+                        </MudGrid>                      
+                        <MudToolBar DisableGutters="true" Class="gap-4">
+                            <MudButton OnClick="AddImages" Color="Color.Primary" Variant="Variant.Filled">Add</MudButton>
+                        </MudToolBar>
+                    </MudTabPanel>  
                     <MudTabPanel Text="Notes">                        
                             <MudPaper Height="329px" xs="12">                       
                                 <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Notes" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                       
@@ -113,7 +132,11 @@
 </MudDialog>
 
 @code {
+    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
     [Parameter] public int Id { get; set; }
+
+   
+    private static readonly NLog.Logger Logger = NLog.LogManager.GetCurrentClassLogger();
 
     private RecipeDetails? recipeDetails;
     private List<TagInfo> allTags;
@@ -121,6 +144,9 @@
     private List<CategoryInfo> allCategories;
     private List<MeasurementInfo> allMeasurements;
     
+    private List<ImageData> images = new List<ImageData>();
+    private List<ImageData> newImages = new List<ImageData>();
+    private List<ImageData> removedImages = new List<ImageData>();
 
     private string saveStatusMessage = string.Empty;
 
@@ -143,6 +169,11 @@
         }else{
             recipeDetails = new(){Title ="", ShortDescription ="", Description = "", Directions = "", Category = allCategories.First(), PreparationTime = TimeOnly.MinValue, CookingTime = TimeOnly.MinValue };
         }
+
+        foreach(var img in recipeDetails.Images){
+            var data = await RecipeService.GetImageDataAsync(img.Id, CancellationToken.None);
+            images.Add(data);
+        }
     }
 // custom sort by name length
     private Func<IngredientDetails, object> _sortBy => x =>
@@ -155,12 +186,15 @@
         if (recipeDetails != null)
         {
             bool success = await RecipeService.SaveRecipeDetailsAsync(recipeDetails, CancellationToken.None);
+            foreach(var img in newImages){
+                success = await RecipeService.SaveImageDataAsync(recipeDetails.Id, img, CancellationToken.None);
+            }
 
             if (success)
             {
                 // Update is successful, navigate to some other page or show success message
                 saveStatusMessage = "Successfully saved.";
-                NavigationManager.NavigateTo("/recipe/list");
+                MudDialog.Close(DialogResult.Ok(true));
             }
             else
             {
@@ -185,8 +219,74 @@
             };
         recipeDetails.Ingredients.Add(newIngredient);
     }
+
+
+    private List<ImageData> imagesToAdd = new List<ImageData>();
+
+    private async Task HandleFileAdded(IBrowserFile file)
+    {
+
+        try{
+            const int maxSizeBytes = 1024*1024*4;
+            if (file.Size >= maxSizeBytes){
+                var msg = $"The file size is {file.Size} bytes and exceeded the maximum size of {maxSizeBytes}.";                
+                Snackbar.Add(msg, Severity.Error);
+                Logger.Error(msg);
+                return;
+            }
+
+            using var stream = file.OpenReadStream();
+            using MemoryStream ms = new MemoryStream();            
+            await stream.CopyToAsync(ms, CancellationToken.None);
+            var image = new ImageData() {
+                Id = 0,
+                Name = file.Name,
+                Title = file.Name,
+                Data = ms.ToArray()
+            };
+            imagesToAdd.Add(image);            
+        }catch(System.IO.IOException ioe)
+        {
+            Logger.Error(ioe, "Problem saving attachments");
+        }
+
+        Logger.Info($"File {file.Name} added.");
+    }
+
+
+    private async void AddImages()
+    {
+        imagesToAdd.Clear();
+
+        var parameters = new DialogParameters<AddImages>();
+        parameters.Add("OnFileAdded", new EventCallback<IBrowserFile>(this, HandleFileAdded));
+
+        var options = new DialogOptions
+            {
+                MaxWidth = MaxWidth.Medium,
+                FullWidth = true,
+                DisableBackdropClick = true,
+                CloseOnEscapeKey = true
+            };
+        var dialog = DialogService.Show<AddImages>("uh", parameters, options);
+        var r = await dialog.Result;
+        if (!r.Canceled && imagesToAdd.Count > 0){
+            images.AddRange(imagesToAdd);
+            newImages.AddRange(imagesToAdd);
+        }
+        imagesToAdd.Clear();
+    }
+
     private void Cancel()
     {
         NavigationManager.NavigateTo("/recipe/list");
+    }
+
+    public static string GetDataURL(string fileName, byte[] imgData)
+    {
+        return "data:image" 
+                    + Path.GetExtension(fileName).Replace(".","").ToLower()
+                    + ";base64," 
+                    + Convert.ToBase64String(imgData);
     }
 }
